# sesame

./: .gitignore  CLAUDE.md  Cargo.toml  config.toml
data/: import_conjugaison.json  import_lecture.json  import_logique.json  import_mathematiques.json  import_sciences.json  questions_comprehension.json  questions_conjugaison.json  questions_culture.json  questions_lecture.json  questions_mathematiques.json  questions_maths_ce1_ce2.json  questions_orthographe.json  questions_sciences.json
data/samples/: example.json
migrations/: 0001_init.sql  0002_admin_and_history.sql  0003_subjects_enabled.sql  0004_children_and_grants.sql  0005_grant_bypass.sql  0006_kinds_exact_number.sql  0007_child_subject_weights.sql
scripts/: apply_difficulty.py  build_comprehension.py  build_orthographe.py  convert_questions.py  gen_maths_ce1_ce2.py  install.sh  sesame-session  sesame.desktop  uninstall.sh
src/: admin.rs  auth.rs  config.rs  db.rs  dedup.rs  importer.rs  lib.rs  main.rs  policy.rs  quiz.rs  web.rs
static/: admin.css  quiz.css  quiz.js
templates/: _poweroff.html  base.html  blocked.html  game.html  granted.html  parent.html  poweroff.html  profiles.html  quiz.html  result.html
templates/admin/: _layout.html  _shell.html  child_form.html  children.html  dashboard.html  history_detail.html  history_list.html  import.html  login.html  question_form.html  questions_list.html  settings.html  setup.html  subjects.html
