[package]
name = "luanti-gate"
version = "0.1.0"
edition = "2024"
description = "Quiz gate that controls access to Luanti for kids"
license = "MIT"
publish = false

[[bin]]
name = "luanti"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tower-cookies = "0.10"

sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
toml = "0.8"

askama = "0.12"
askama_axum = "0.4"

argon2 = "0.5"
rand = "0.8"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

anyhow = "1"
thiserror = "2"

chrono = { version = "0.4", features = ["serde"] }
dirs = "5"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
